fix whitespace on body

--- a/stylesheets/index-stylesheet.css
+++ b/stylesheets/index-stylesheet.css
@@ -1,7 +1,6 @@
 * {
   text-align: center;
   /*border: 1px solid black;*/
-  font-size: 0;
 }
 
 .header {
